--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,20 +13,18 @@
 <body>
   <div class="container">
     <h1 class="mb-4">Blog Articles</h1>
-    <a href="/articles/new" class="btn btn-success">New
-      Article</a>
+    <a href="/articles/new" class="btn btn-success">New Article</a>
 
     <% articles.forEach(article=> { %>
       <div class="card mt-4">
         <div class="card-body">
           <h4 class="card-title"><%= article.title %></h4>
           <div class="card-subtitle text-muted mb-2">
+            <%= article.createdAt.toLocaleDateString ()%>
+          </div>
         </div>
-        </div>
-        <%= article.title %>
       </div>
       <% }) %>
   </div>
 </body>
-
 </html>
