added save button

--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -1,5 +1,6 @@
 <div class="form-group">
 <label for="title">Title</label>
-<input required type="text" name="title" id="title"
-class="form-control">
+<input required type="text" name="title" id="title" class="form-control">
+
+<button type="submit" class="brn btn-primary">Save</button>
 </div>
