--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -1,6 +1,13 @@
 <div class="form-group">
-<label for="title">Title</label>
-<input required type="text" name="title" id="title" class="form-control">
-
-<button type="submit" class="brn btn-primary">Save</button>
+    <label for="title">Title</label>
+    <input required type="text" name="title" id="title" class="form-control">
 </div>
+<div class="form-group">
+    <label for="description">Description</label>
+    <textarea name="description" id="description" class="form-control"></textarea>
+</div>
+
+
+<button type="submit" class="btn btn-primary">Save</button>
+
+
