--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -6,8 +6,12 @@
     <label for="description">Description</label>
     <textarea name="description" id="description" class="form-control"></textarea>
 </div>
+<div class="form-group">
+    <label for="markdown">Markdown</label>
+    <textarea name="markdown" id="markdown" class="form-control"></textarea>
+</div>
 
-
+<a href="/" class="btn btn-secondary">Cancel</a>
 <button type="submit" class="btn btn-primary">Save</button>
 
 
