--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -4,14 +4,13 @@
 </div>
 <div class="form-group">
     <label for="description">Description</label>
-    <textarea name="description" id="description" class="form-control"></textarea>
+    <textarea name="description" id="description" 
+    class="form-control"><%= article.description %></textarea>
 </div>
 <div class="form-group">
     <label for="markdown">Markdown</label>
-    <textarea name="markdown" id="markdown" class="form-control"></textarea>
+    <textarea required name="markdown" id="markdown" class="form-control"><%= article.markdown %></textarea>
 </div>
 
 <a href="/" class="btn btn-secondary">Cancel</a>
 <button type="submit" class="btn btn-primary">Save</button>
-
-
