--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,10 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Blog</title>
 </head>
-
 <body>
     <div class="container">
-        <h1 class="mb-4"><%= article.title %></h1>
+        <h1 class="mb-1"><%= article.title %></h1>
+           <div><%= article.createdAt.toLocaleDateString() %></div>
     </div>
 </body>
 </html>
